[gd_scene load_steps=13 format=3 uid="uid://bd2igfxw03rij"]

[ext_resource type="Script" path="res://Scripts/fuego.gd" id="1_idslq"]
[ext_resource type="AudioStream" uid="uid://daghy72h8pbi5" path="res://SFX/Ambientes/Ambiente_Cabina_Basurero.ogg" id="2_dl63j"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lsgvd"]
disable_ambient_light = true
albedo_color = Color(0, 0, 0, 1)
metallic_specular = 0.0
emission_enabled = true
emission = Color(0.863732, 0.663702, 0, 1)

[sub_resource type="Curve" id="Curve_72kv8"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), -2.83345, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_y4ho2"]
curve = SubResource("Curve_72kv8")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_gl55e"]
emission_shape = 1
emission_sphere_radius = 1.0
gravity = Vector3(0, 10, 0)
linear_accel_min = -2.23517e-06
linear_accel_max = 0.999998
radial_accel_min = -5.98
radial_accel_max = -2.23517e-06
tangential_accel_min = -2.23517e-06
tangential_accel_max = -2.23517e-06
scale_min = 0.5
scale_curve = SubResource("CurveTexture_y4ho2")
scale_over_velocity_max = 108.7

[sub_resource type="SphereMesh" id="SphereMesh_qy0tq"]
radial_segments = 6
rings = 7

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dpxh6"]
disable_ambient_light = true
albedo_color = Color(0, 0, 0, 1)
metallic_specular = 0.0
emission_enabled = true
emission = Color(1, 0.419, 0.17, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_85ivh"]
disable_ambient_light = true
albedo_color = Color(0.340339, 0.34034, 0.340338, 1)
metallic_specular = 0.0
emission = Color(0.31, 0.31, 0.31, 1)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_k2awc"]
emission_shape = 1
emission_sphere_radius = 1.0
gravity = Vector3(0, 10, 0)
linear_accel_min = -2.23517e-06
linear_accel_max = 0.999998
radial_accel_min = -5.98
radial_accel_max = -2.23517e-06
tangential_accel_min = -2.23517e-06
tangential_accel_max = -2.23517e-06
scale_min = 0.5
scale_curve = SubResource("CurveTexture_y4ho2")
scale_over_velocity_max = 108.7

[sub_resource type="SphereMesh" id="SphereMesh_52apu"]
radius = 1.0
height = 2.0
radial_segments = 6
rings = 7

[sub_resource type="SphereShape3D" id="SphereShape3D_v8bm5"]
radius = 1.29287

[node name="Fuego" type="Node3D"]
script = ExtResource("1_idslq")

[node name="Positions" type="Node3D" parent="."]

[node name="p_1" type="Marker3D" parent="Positions"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10.4621, 0, 0)

[node name="p_2" type="Marker3D" parent="Positions"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -6.2991)

[node name="p_3" type="Marker3D" parent="Positions"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.29549, 0, 0)

[node name="p_4" type="Marker3D" parent="Positions"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.54722)

[node name="p_5" type="Marker3D" parent="Positions"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.92809, 0, -3.28347)

[node name="Fuego" type="Node3D" parent="."]

[node name="Particula_1" type="GPUParticles3D" parent="Fuego"]
material_override = SubResource("StandardMaterial3D_lsgvd")
emitting = false
amount = 12
fixed_fps = 24
trail_lifetime = 0.2
process_material = SubResource("ParticleProcessMaterial_gl55e")
draw_pass_1 = SubResource("SphereMesh_qy0tq")

[node name="Particula_2" type="GPUParticles3D" parent="Fuego"]
transform = Transform3D(0.5, 0, 0.866025, 0, 1, 0, -0.866025, 0, 0.5, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_dpxh6")
emitting = false
amount = 12
fixed_fps = 24
trail_lifetime = 0.2
process_material = SubResource("ParticleProcessMaterial_gl55e")
draw_pass_1 = SubResource("SphereMesh_qy0tq")

[node name="Particula_3" type="GPUParticles3D" parent="Fuego"]
transform = Transform3D(0.258819, 0, 0.965926, 0, 1, 0, -0.965926, 0, 0.258819, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_85ivh")
emitting = false
amount = 20
fixed_fps = 24
trail_lifetime = 0.2
process_material = SubResource("ParticleProcessMaterial_k2awc")
draw_pass_1 = SubResource("SphereMesh_52apu")

[node name="Apagar" type="Area3D" parent="Fuego" groups=["Fuego"]]
collision_layer = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="Fuego/Apagar"]
shape = SubResource("SphereShape3D_v8bm5")

[node name="Cambiar_Fuego" type="Timer" parent="."]
process_callback = 0
one_shot = true

[node name="FuegoAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_dl63j")
volume_db = -20.0

[connection signal="area_entered" from="Fuego/Apagar" to="." method="_on_apagar_area_entered"]
[connection signal="area_exited" from="Fuego/Apagar" to="." method="_on_apagar_area_exited"]
[connection signal="timeout" from="Cambiar_Fuego" to="." method="_on_cambiar_fuego_timeout"]
